refs #82 added harvester dialog that shows basic health stats of harvesters

--- a/ChiaPlotStatusGUI/GUI/Views/MainWindow.axaml
+++ b/ChiaPlotStatusGUI/GUI/Views/MainWindow.axaml
@@ -165,6 +165,7 @@
           <MenuItem Header="Update" Name="UpdateButton" />
           <MenuItem Header="Donate" Name="DonateButton" />
           <MenuItem Header="Statistics" Name="StatisticsButton" />
+          <MenuItem Header="Harvesters" Name="HarvestersButton" />
         </Menu>
       </DockPanel>
 			<StackPanel Orientation="Horizontal">
